# juno

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.lan  Dockerfile.lanagent  Dockerfile.web  LICENSE  Makefile  README.md  codecov.yml  conanfile.py  docker-compose.yaml  go.mod  go.sum  juno-conductor  makefile
.github/: copilot-instructions.md
.github/skills/code-review/: SKILL.md
.github/skills/lint-fix/: SKILL.md
.github/workflows/: deploy.yaml  juno.yaml  test-pipeline.yaml  test.yaml
api/: rest-oapi-codegen.yaml  rest-openapi.yaml  web-openapi.yaml
cicd/: build-containers.sh  deploy.sh  generate-coverage-reports.sh  generate-coverage.sh  generate-deployment.sh  init-deployment.sh  integration-test-run.sh  integration-test-setup.sh  integration-test-teardown.sh  integration-test-with-coverage.sh  make-env-template.sh  make_env_template.sh  push-images.sh  recreate_env.sh  run-conductor.sh  run-docker-smoke-tests.sh  run-functional-tests.sh  run-lan-agent.sh  run-local-tests.sh  run-postgres.sh  run-server.sh  start-containers.sh  stop-postgres.sh
cicd/deployer/: deployer.py
cicd/template/: docker-compose.core.yaml  docker-compose.edge.yaml  nginx.conf  promtail.yaml
cicd/template/grafana-dashboards/: db-metrics.json  logs.json
cicd/template/grafana-provisioning/dashboards/: dashboards.yaml
cmd/juno/: main.go
cmd/juno-conductor/: main.go
cmd/juno-lan-agent/: main.go
cmd/juno-mcp/: main.go
cmd/juno-server/: main.go
cmd/juno-web/: main.go
conf/: .env.cicd  .env.cicd.docker  .env.example  .env.example.docker  conductor.json  conductor.local.json  conductor.local.yaml  conductor.yaml  full-functional-tests-config.json  jobs.txt  juno.json  smoke-functional-tests-config.json  test-config.json
conf/grafana/dashboards/: http-metrics.json
conf/grafana/provisioning/datasources/: datasources.yaml
conf/loki/: loki.yaml
conf/postgres/: init.sql
conf/prometheus/: prometheus.yaml
conf/promtail/: promtail.yaml
internal/bus/: bus.go  bus_test.go  errors.go  future.go  future_generic_test.go  message.go  sender.go  topic.go  topic_test.go
internal/core/: config.go  errors.go  messages.go
internal/db/: db.go  metrics.go
internal/db/migrations/: 000001_create_devices.up.sql
internal/device/: adapter.go  db.go  device.go  messages.go  messages_test.go  service.go  service_test.go
internal/lan/: discover.go  handlers.go  handlers_test.go  service.go
internal/logger/: logger.go
internal/mcp/: client.go  client_test.go  handlers.go  handlers_test.go  service.go
internal/models/: messages.go
internal/rest/: handlers_device.go  handlers_health.go  handlers_sse.go  handlers_test.go  server.go  service.go
internal/supervisor/: bus.go  bus_test.go  service.go  supervisor.go  supervisor_test.go
internal/web/: embed.go  handlers.go  handlers_http_test.go  handlers_test.go  service.go
internal/web/static/: style.css
internal/web/templates/: device_widget.html  devices.html  error.html  events.html  layout.html  metrics.html
internal/yeelight/: adapter.go  adapter_test.go  client.go  device.go  device_test.go  utils.go  utils_test.go
juno/: CMakeLists.txt  Config.cpp  Config.hh  Core.cpp  Core.hh  Messages.hh  Queues.hh  Server.cpp  Server.hh  Service.cpp  Service.hh  main.cpp
juno/api/: DeviceEndpoints.cpp  DeviceEndpoints.hh  Endpoints.cpp  Endpoints.hh  GrpcApi.cpp  GrpcApi.hh  HealthEndpoints.cpp  Helpers.cpp  Helpers.hh
juno/api/endpoints/: DeviceEndpoints.cpp  DeviceEndpoints.hh  HealthEndpoints.hh  SchedulerEndpoints.cpp  SchedulerEndpoints.hh
juno/devices/: Device.cpp  Device.hh  DeviceProxy.cpp  DeviceProxy.hh  Vendor.hh
juno/devices/vendors/: Yeelight.cpp  Yeelight.hh
juno/devices/yeelight/: Yeelight.hh  YeelightBulb.cpp  YeelightBulb.hh  YeelightVendor.cpp  YeelightVendor.hh
juno/messages/: Queues.hh
juno/metrics/: MetricService.cpp  MetricService.hh  Metrics.cpp  Metrics.hh
juno/net/: AsyncGrpcServer.cpp  AsyncGrpcServer.hh  Grpc.cpp  Grpc.hh  Http.cpp  Http.hh  Socket.cpp  Socket.hh
juno/proto/: juno.grpc.pb.cc  juno.grpc.pb.h  juno.pb.cc  juno.pb.h
juno/rpc/: Calls.cpp  Calls.hh  MessageQueueDestination.hh  Messages.hh  Queues.hh  RemoteCallee.hh  Service.cpp  Service.hh
juno/scheduler/: Scheduler.cpp  Scheduler.hh
juno/scheduler/jobs/: Job.cpp  Job.hh  JobParser.cpp  JobParser.hh
juno/scheduler/jobs/actions/: Action.hh
proto/: juno.proto
tests/: conftest.py  requirements.txt  runner.py  test_devices.py  test_health.py  test_lan_agent.py  test_web.py  test_yeelight.py
tests/base/: fixtures.py  mock_yeelight.py
